Fix word break option with word-wrap

--- a/packages/gosari/content/assets/global.css
+++ b/packages/gosari/content/assets/global.css
@@ -16,4 +16,6 @@ body {
 
 * {
   word-break: keep-all;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
